--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-924.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-7.24MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.42MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.30MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-549.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-3.19MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.95MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 167.88.61.14, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-549.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-549.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-549.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-549.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-549.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-549.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-549.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
