--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-400.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-313.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-221.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-157.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 167.88.61.14, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-4.00MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
